--- a/WEB/exercisio.html
+++ b/WEB/exercisio.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cesae</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
-    <div style="text-align: center;">
+    <header>
         <a target="_blank" href="https://www.cesaedigital.pt/"><img src="./img/logocesae.png" height="100" width="400" alt=""></a>
         <br>
         <a target="_blank" href="https://www.cesaedigital.pt/">Ir para site official</a>
@@ -16,7 +17,7 @@
         <a href="https://br.linkedin.com/company/cesae-digital"><img src="./img/linkedin.webp" height="25" alt="Linkedin"></a>
         <a href="https://www.youtube.com/user/CESAECanal"><img src="./img/youtube.png" height="25" alt="Youtube"></a>
         <hr>
-    </div>
+    </header>
 
     <!-- Secção 1-->
     <div>
@@ -36,7 +37,7 @@
         <h1>Natureza, atribuições e competências</h1>
         <p>São atribuições do CESAE Digital promover a realização de formação profissional e de reconhecimento, validação e certificação de competências, a prestação de serviços e apoio técnico a entidades no âmbito das áreas das Tecnologias da Informação e da Comunicação (TIC) e do digital, prosseguindo a seguinte missão:</p>
         <ol>
-            <li>Valorização dos ativos conducente à <span style="background-color: red; color: white;">qualificação, certificação e aperfeiçoamento técnico dos profissionais e dos candidatos a profissões</span> do âmbito da sua intervenção, preferencialmente, aqueles que se encontrem na condição de desempregados através da frequência de formação profissional que lhes favoreça o (re)ingresso rápido e de qualidade no mercado de trabalho;</li>
+            <li>Valorização dos ativos conducente à qualificação, certificação e aperfeiçoamento técnico dos profissionais e dos candidatos a profissões do âmbito da sua intervenção, preferencialmente, aqueles que se encontrem na condição de desempregados através da frequência de formação profissional que lhes favoreça o (re)ingresso rápido e de qualidade no mercado de trabalho;</li>
             <li>Valorização da capacidade empresarial, através do desenvolvimento de ações de consultoria e apoio técnico destinadas a empresas, associações empresariais, ou outros agentes económicos e parceiros sociais que integrem o seu âmbito de intervenção, podendo, ainda, desenvolver ações de cooperação com entidades estrangeiras, tanto na área formativa, como de apoio técnico.</li>
         </ol>
         <p>Com o estabelecimento desta renovada parceria estratégica para a dinamização das políticas públicas de transformação digital da economia portuguesa, através da capacitação e requalificação das competências digitais dos cidadãos em geral e dos ativos empregados e desempregados em particular, reforça-se a nobre missão do CESAE DIGITAL naquele desígnio coletivo, revitalizando o seu potencial de intervenção na sociedade de conhecimento e na digitalização da economia.</p>
