--- a/WEB/exercicio.html
+++ b/WEB/exercicio.html
@@ -19,31 +19,34 @@
             <a href="multimedia.html">Multimédia</a> |
             <a href="form.html">Formulário</a>
             <br>
-            <a title="Facebook" href="https://www.facebook.com/CesaeDigital" target="_blank">
+            <a class="icon-link" href="https://www.facebook.com/CesaeDigital" target="_blank">
                 <img src="img/facebook_logo.svg" alt=""></a>
-            <a href="https://www.linkedin.com/company/cesae-digital/mycompany/" target="_blank">
+            <a class="icon-link" href="https://www.linkedin.com/company/cesae-digital/mycompany/" target="_blank">
                 <img src="img/linkedin_logo.webp" alt=""></a>
-            <a href="https://www.youtube.com/user/CESAECanal" target="_blank">
+            <a class="icon-link" href="https://www.youtube.com/user/CESAECanal" target="_blank">
                 <img src="img/Youtube_logo.png" alt=""></a>
+            <a class="icon-link" title="Twitter" href="https://www.x.com" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zm297.1 84L257.3 234.6 379.4 396H283.8L209 298.1 123.3 396H75.8l111-126.9L69.7 116h98l67.7 89.5L313.6 116h47.5zM323.3 367.6L153.4 142.9H125.1L296.9 367.6h26.3z"/></svg>
+            </a>
         </nav>
     </header>
     <main>
         <hr>
 
         <h1>Sobre o CESAE Digital</h1>
-        <p>O CESAE Digital nasceu em julho de 2020, fruto da transformação do então designado CESAE – Centro de Serviços
+        <p class="about">O CESAE Digital nasceu em julho de 2020, fruto da transformação do então designado CESAE – Centro de Serviços
             e
             Apoio às Empresas, promovida pelo Ministério do Trabalho, Solidariedade e Segurança Social, e por acordo
             entre o
             IEFP e a AEP, prosseguindo desta forma uma meritória e qualificante tarefa de cerca de 35 anos ao serviço da
             inovação e do conhecimento.</p>
-        <p>Essa transformação do anterior CESAE, ocorre por homologação do Protocolo que cria o CESAE Digital – Centro
+        <p class="about">Essa transformação do anterior CESAE, ocorre por homologação do Protocolo que cria o CESAE Digital – Centro
             para
             o Desenvolvimento das Competências Digitais, outorgado entre o IEFP – Instituto de Emprego e Formação
             Profissional (IEFP, IP) e a Associação Empresarial de Portugal (AEP), publicado na Portaria nº 169/2020, de
             10
             de julho. </p>
-        <p>Deste modo, o novo CESAE Digital passa a ser um Centro Protocolar ou Centro de Formação Profissional de
+        <p class="about">Deste modo, o novo CESAE Digital passa a ser um Centro Protocolar ou Centro de Formação Profissional de
             Gestão
             Participada, sendo um organismo dotado de personalidade jurídica de direito público sem fins lucrativos, e
             com o
@@ -60,7 +63,7 @@
         </ul>
 
         <h1>Natureza, atribuições e competências</h1>
-        <p>São atribuições do CESAE Digital promover a realização de formação profissional e de reconhecimento,
+        <p class="content">São atribuições do CESAE Digital promover a realização de formação profissional e de reconhecimento,
             validação e
             certificação de competências, a prestação de serviços e apoio técnico a entidades no âmbito das áreas das
             Tecnologias da <span id="texto1">Informação e da Comunicação </span>(TIC) e do digital, prosseguindo a seguinte missão:</p>
@@ -94,7 +97,7 @@
         <hr>
     </main>
     <footer>
-        <p>Desenvolvido por Rui Ribeiro</p>
+        <p>Desenvolvido por Bruno Santos</p>
     </footer>
 
 </body>
